--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,7 +2,7 @@ services:
   backend:
     build:
       context: ./backend/
-      dockerfile: dockerfile.dev
+    dockerfile: Dockerfile.dev
     container_name: vault-36-central-computer
     restart: unless-stopped
     volumes:
@@ -13,7 +13,7 @@ services:
   frontend:
     build:
       context: ./frontend/
-      dockerfile: dockerfile
+    dockerfile: Dockerfile
     container_name: vault-36-terminal
     restart: unless-stopped
     ports:
@@ -23,29 +23,28 @@ services:
     volumes:
       - "./frontend:/usr/src/app"
       - "/usr/src/app/node_modules"
+  
+    nginx:
+      build:
+        context: ./proxy/
+      restart: unless-stopped
+      container_name: vault-36-proxy
+      ports:
+        - 80:80
+      depends_on:
+        - frontend
+        - backend
 
-  nginx:
+  database:
+    volumes:
+        - sqlite_data:/data
     build:
-      context: ./proxy/
-    restart: unless-stopped
-    container_name: vault-36-proxy
+      context: ./db/
+      dockerfile: Dockerfile.dev
+    restart: always
+    container_name: vault-36-database
     ports:
-       - 80:80
-    depends_on:
-       - frontend
-       - backend
-
- # database:
-    #    build:
-#      context: ./db/
-#     dockerfile: dockerfile.dev
-    #    restart: always
-    #container_name: vault-36-database
-    #ports:
-      #  - 4306:3306
-    #volumes:
-      #  - sqlite_data:/data
-
-
-#volumes:
-  #  sqlite_data:
+        - 4306:3306
+    
+volumes:
+   sqlite_data:
