--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,5 +1,21 @@
-FROM python:latest
+FROM python:alpine
 
+## Create the Database
+
+RUN apk --no-cache add sqlite
+# Create a directory to store the database
+WORKDIR /db
+# Copy our SQLite database file into the container
+COPY ./vault-36-db.sqlite /db/data/
+COPY ./create_script.db /db/
+# Expose the port if needed
+Expose 3306
+# Command to run when the container starts
+USER root
+RUN cat ./create_script.db | sqlite3 ./data/vault-36-db.sqlite
+
+
+## Create the server
 WORKDIR /usr/src/app
 
 COPY ./requirements.txt .
