--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
 blinker==1.8.1
 click==8.1.7
 Flask==3.0.3
+Flask-JWT==0.3.2
 itsdangerous==2.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+PyJWT==1.4.2
 Werkzeug==3.0.2
