Removed temp file, tried to add axios and websocket

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -24,6 +24,8 @@ services:
     volumes:
       - "./frontend:/usr/src/app"
       - "/usr/src/app/node_modules"
+    env_file:
+      - "./frontend/pip-boy-36/.env"
 
   nginx:
     build:
