--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,16 @@
 blinker==1.8.1
 click==8.1.7
 Flask==3.0.3
+Flask-Cors==4.0.1
 Flask-JWT-Extended==4.6.0
+Flask-SocketIO==4.3.2
 itsdangerous==2.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 PyJWT==2.8.0
+python-engineio==3.14.2
+python-socketio==4.6.1
 setuptools==70.1.0
+six==1.16.0
 Werkzeug==3.0.2
 wheel==0.43.0
