--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -22,10 +22,11 @@ services:
     depends_on:
       - backend
     volumes:
-      - "./frontend:/usr/src/app"
-      - "/usr/src/app/node_modules"
-    env_file:
-      - "./frontend/pip-boy-36/.env"
+      - "./frontend/pip-boy-36:/pip-boy-36-app/:delegated"
+      - "/pip-boy-36-app/node_modules"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true
 
   nginx:
     build:
