--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -22,7 +22,7 @@ services:
     depends_on:
       - backend
     volumes:
-      - "./frontend/pip-boy-36:/pip-boy-36-app/:delegated"
+      - "./frontend/pip-boy-36:/pip-boy-36-app/:cached"
       - "/pip-boy-36-app/node_modules"
     environment:
       - CHOKIDAR_USEPOLLING=true
