Updated ymal and database scripts Added baseurl to env file and removed individual variables from files. Fixed bug in create script file.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,8 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
       - WATCHPACK_POLLING=true
+    env_file:
+      - ./frontend/.env
 
   nginx:
     build:
