--- a/frontend/pip-boy-36/package.json
+++ b/frontend/pip-boy-36/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-tabs": "^6.0.2",
     "sass": "^1.76.0",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
