--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,10 +22,13 @@ services:
     depends_on:
       - backend
     volumes:
-      - "./frontend:/usr/src/app"
-      - "/usr/src/app/node_modules"
+      - "./frontend/pip-boy-36:/pip-boy-36-app/"
+      - "/pip-boy-36-app/node_modules"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true
     env_file:
-      - "./frontend/pip-boy-36/.env"
+      - ./frontend/.env
 
   nginx:
     build:
